Fix all footnote issues

--- a/discussion.tex
+++ b/discussion.tex
@@ -16,7 +16,7 @@ As \citet{streiter2006implementing} recommends, open source can also generate a 
 
 As was clear from looking at Gaelic, open source code widely leads to accessibility and for language resource generation. The difficulty of finding resources does not mean that there are not any at the governmental, military, or enterprise level. However, what resources have been found have generally been open source; it is because Scannell and Bauer work largely with open source licensing that their work has been able to complement each other's and to build tooling around Gaelic resources. Hopefully, this trend will continue.
 
-On a more broad level, open source can certainly help language development for other LRLs through educational materials. Currently, software developers in the tens of thousands are learning how to code using open source tooling on GitHub. NLTK is one of the most popular projects on GitHub, and with almost a thousand citations on Google Scholar,\footnote{\href{https://scholar.google.com/scholar?q=NLTK}{https://scholar.google.com/scholar?q=NLTK}. \last{April~27}}, it is popular with academics, too. Open source has allowed it to thrive. Students using it may go on to use its tooling for their own languages; and, as more digital natives learn to code and as more languages find their own language communities online, it is hoped that more languages will digitally ascend.
+On a more broad level, open source can certainly help language development for other LRLs through educational materials. Currently, software developers in the tens of thousands are learning how to code using open source tooling on GitHub. NLTK is one of the most popular projects on GitHub, and with almost a thousand citations on Google Scholar,\footnote{\href{https://scholar.google.com/scholar?q=NLTK}{https://scholar.google.com/scholar?q=NLTK}. \last{April~27}} it is popular with academics, too. Open source has allowed it to thrive. Students using it may go on to use its tooling for their own languages; and, as more digital natives learn to code and as more languages find their own language communities online, it is hoped that more languages will digitally ascend.
 
 % I covered this enough. I would just be repeating myself.
 % \subsection{Why is not more code open?}
