--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,7 @@ At least half of the world's 7000-odd languages will be extinct this century \ci
 
 The majority of the world's computational technology has been built by English, with English manuals, English interfaces, and by English speakers. The most prevalent language spoken by users of this technology is also English. There are a few languages - around thirty - with the combination of large populations with internet access, official governmental status, and industrial economies which affords them some native computational technology, in particular on the World Wide Web, the largest global network for sharing code and written material.
 
-English is the undisputed heavyweight as far as global written resources are concerned.\footnote{\href{https://w3techs.com/technologies/history_overview/content_language}{https://w3techs.com/technologies/history\_overview/content\_language. \last{May 1}}} Over half of the web's content is written in English. The next largest languages are Russian, German, Spanish, Japanese, and French - with a combined population of well over a billion speakers. Portuguese, Italian, and Chinese have the next largest amount of content - but each of them only covers between 2\% and 3\% of the web's content - followed by Polish, Turkish, Dutch, and Korean with over 1\%. Suffice to say, the graph of global written content is not skewed towards language diversity as a norm. This is not surprising in any event, as around 90\% of the world's languages are spoken by less than 10\% of its people \citep{bernard1992preserving}.
+English is the undisputed heavyweight as far as global written resources are concerned.\footnote{\href{https://w3techs.com/technologies/history_overview/content_language}{https://w3techs.com/technologies/history\_overview/content\_language}. \last{May 1}} Over half of the web's content is written in English. The next largest languages are Russian, German, Spanish, Japanese, and French - with a combined population of well over a billion speakers. Portuguese, Italian, and Chinese have the next largest amount of content - but each of them only covers between 2\% and 3\% of the web's content - followed by Polish, Turkish, Dutch, and Korean with over 1\%. Suffice to say, the graph of global written content is not skewed towards language diversity as a norm. This is not surprising in any event, as around 90\% of the world's languages are spoken by less than 10\% of its people \citep{bernard1992preserving}.
 
 In part, these high resource languages depend upon extant corpora to bootstrap further development of human language technology (HLT). It is difficult for languages which are newcomers to the digital world to get started. % This does not follow well
 Put simply (and therefore inelegantly), a literacy system affords corpora, and corpora can be used by researchers to either build tools for that language or to adapt tools from other languages. These tools might be spell-checkers, parsers, input systems, or later on speech recognition and generation software, semantic analysers, or machine learning and translation systems, among others. But these tools only become useful as soon as there exists corpora for them; otherwise, such work is premature. Further, high resource languages can depend upon other code to work into their systems; a parser for French might be adapted for Spanish, given a large corpus to train on; whereas adapting code without scarce data is more difficult.
