--- a/low-resource-languages.tex
+++ b/low-resource-languages.tex
@@ -20,7 +20,7 @@ All of these terms could be controversial in certain contexts, and work within l
 
 {\it Endangered} languages are normally languages which have a high amount of speakers, and crucially are still teaching children the language. Children ensure that the language will live on to the next generation, and when this chain breaks, it is almost impossible to resurrect a language. A language would be endangered when it can be assumed that children will stop learning the language in the next hundred years (according to \citet{krauss92}). This can be difficult to judge, as the rate of deterioration can be high. For instance, Breton had over a million speakers in 1950, but today the numbers may be as low as 200,000. Its future is uncertain.
 
-\emph{Moribund} languages are languages which are {\it critically endangered}, in that there are no children currently learning the language and using it frequently, although there are speakers. Ainu is a good example, with roughly ten native speakers still living, all of whom are over 80 years old, \footnote{\href{https://www.ethnologue.com/language/ain}{https://www.ethnologue.com/language/ain}. \last{May~2}} although there are some struggling efforts to revive it \citep{hanks2017policy}. On the other side of the northern Pacific, Haida has a similar amount of native speakers, but because of the amount of immersion programmes, government-funded schools, and new domains for the language, it is not considered moribund. An example of a new domain for Haida would be a recent motion picture filmed entirely in Haida with ethnically Haida actors who learned their lines from the elders. \footnote{\href{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}. \last{May~2}}
+\emph{Moribund} languages are languages which are {\it critically endangered}, in that there are no children currently learning the language and using it frequently, although there are speakers. Ainu is a good example, with roughly ten native speakers still living, all of whom are over 80 years old,\footnote{\href{https://www.ethnologue.com/language/ain}{https://www.ethnologue.com/language/ain}. \last{May~2}} although there are some struggling efforts to revive it \citep{hanks2017policy}. On the other side of the northern Pacific, Haida has a similar amount of native speakers, but because of the amount of immersion programmes, government-funded schools, and new domains for the language, it is not considered moribund. An example of a new domain for Haida would be a recent motion picture filmed entirely in Haida with ethnically Haida actors who learned their lines from the elders.\footnote{\href{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}. \last{May~2}}
 
 \emph{Dormant} or \textit{sleeping} languages are a stage beyond moribund languages. They have no living fluent speakers. This does not mean that the language is extinct. An example would be Mutsun, an Ohlone or Costanoan language formerly spoken near San Juan Bautista, California, whose last known fluent speaker Ascensi\'on Sol\'orsano passed away in 1930. However, in the late 90s, the Mutsun people (recognised formally as the Amah Mutsun Tribal Band) began a revitalisation project using the extensive documentation left behind by linguists, anthropologists, and a Catholic mission priest, and now there are several conversational (albeit no fluent) speakers \citep{warner2007ethics}. Ethnologue defines dormant as a language which has no speakers, but there is still a community that attaches its ethnic identity to the language \citep{lewis2010assessing}.
 
@@ -161,7 +161,7 @@ ethnocultural  community  and  to  differentiate  between  life-threatening  and
 
 \subsubsection{The Language Endangerment Index (LEI)}
 
-Just as EGIDS expanded on GIDS, the Language Endangerment Index (LEI) was formed to resolve some of the issues with EGIDS, as well as to respond to GIDS, the UNESCO rating, and the rating in \citet{krauss2007classification}, another metric which focused almost exclusively on different ages of speakers and classified all languages with children speakers as 'stable', and all with over a million speakers as 'safe'. \citet{lee2016assessing} describe LEI for its use in The Catalogue of Endangered Languages (ELCat), part of the Google-powered Endangered Languages Project.\footnote{\href{http://endangeredlanguages.com}{http://endangeredlanguages.com}. \last{May~2}} The project is not only sponsored by Google, but also by an American governmental National Science Foundation (NSF) grant\footnote{\href{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}. \last{May~2}}, and is an ambitious project (like UNESCO and Ethnologue) to catalogue all languages and to provide specific metrics of language vitality.
+Just as EGIDS expanded on GIDS, the Language Endangerment Index (LEI) was formed to resolve some of the issues with EGIDS, as well as to respond to GIDS, the UNESCO rating, and the rating in \citet{krauss2007classification}, another metric which focused almost exclusively on different ages of speakers and classified all languages with children speakers as 'stable', and all with over a million speakers as 'safe'. \citet{lee2016assessing} describe LEI for its use in The Catalogue of Endangered Languages (ELCat), part of the Google-powered Endangered Languages Project.\footnote{\href{http://endangeredlanguages.com}{http://endangeredlanguages.com}. \last{May~2}} The project is not only sponsored by Google, but also by an American governmental National Science Foundation (NSF) grant,\footnote{\href{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}. \last{May~2}} and is an ambitious project (like UNESCO and Ethnologue) to catalogue all languages and to provide specific metrics of language vitality.
 
 The authors, in describing LEI, go into detail explaining how previous classifications, while they "highlight[s] the immensity of the problem at hand", can not easily apply to certain languages, and that these exceptions are critical to understanding whether the metrics are useful as opposed to being exceptions which prove the rule. Unlike the other papers, they explicitly mention some languages. For instance, they mention how \citet{dwyer2012tools} points out that Wutun, a Chinese-Tibetan-Mongolic language, is endangered due to a variety of factors, even if transgenerational transmission is not at risk - thus, GIDS or EGIDS may not satisfactorily categorise the language. A similar case could be made for Naskapi (see Section~\ref{sec:naskapi} for more on this).
 
