chore: fix all left-hand apostrophes

--- a/floss.tex
+++ b/floss.tex
@@ -26,7 +26,7 @@ However, for the most part, open source is not disambiguated as a term, because 
 
 There are many licenses which are considered to be open source, and there are several arbiters available which judge the validity of open source licensing. The Open Source Initiative (OSI) maintains a list of approved licenses on their website.\footnote{\href{https://opensource.org/licenses}{https://opensource.org/licenses}. \last{May~2}}
 
-The OSI, whose founders were one of the original coiners of the term {\it open source}, has several parameters by which open source software can be judge as being 'open' or 'closed' (that is, proprietary, non-permissively licensed, non-reusable, limited in usage to a set amount of people, and so on). It may be useful to list these terms directly below, as they are instructive about how open source can be a nuanced term. These terms and their definitions are from the OSI's website,\footnote{\href{https://opensource.org/osd}{https://opensource.org/osd}. \last{May~2}} and are repeated below verbatim.
+The OSI, whose founders were one of the original coiners of the term {\it open source}, has several parameters by which open source software can be judge as being `open' or `closed' (that is, proprietary, non-permissively licensed, non-reusable, limited in usage to a set amount of people, and so on). It may be useful to list these terms directly below, as they are instructive about how open source can be a nuanced term. These terms and their definitions are from the OSI's website,\footnote{\href{https://opensource.org/osd}{https://opensource.org/osd}. \last{May~2}} and are repeated below verbatim.
 
 \begin{enumerate}
 \item{Free Redistribution}. The license shall not restrict any party from selling or giving away the software as a component of an aggregate software distribution containing programs from several different sources. The license shall not require a royalty or other fee for such sale.
