--- a/title-page.tex
+++ b/title-page.tex
@@ -1,7 +1,7 @@
 \begin{titlepage}
 	\begin{center}
 
-		% Upper part of the page. The '~' is needed because \\
+		% Upper part of the page. The ~ is needed because \\
 		% only works if a paragraph has started.
 		\includegraphics[width=0.25\textwidth]{img/eule.png}~\\[1cm]
 
