--- a/case-studies.tex
+++ b/case-studies.tex
@@ -27,7 +27,7 @@ Some of these corpora are annotated - for instance, the Annotated Reference Corp
 \citet{scannell2007crubadan} and contributors\footnote{\href{http://crubadan.org/acknowldegments}{http://crubadan.org/acknowldegments}. \last{May~2}} used the Cr\'ubad\'an corpus to create an open source Hunspell spellchecker,\footnote{\href{https://github.com/kscanne/hunspell-gd}{https://github.com/kscanne/hunspell-gd}. \last{April~27}} which is the spellchecker for "LibreOffice, OpenOffice.org, Mozilla Firefox 3 and Thunderbird, Google Chrome, and it is also used by proprietary software packages, like macOS, InDesign, memoQ, Opera and SDL Trados."\footnote{\href{https://hunspell.github.io/}{https://hunspell.github.io/}. \last{April~27}} This spellchecker was built with the help of Michael Bauer, an independent Gaelic technologist who runs a small Gaelic technology consultancy called Am Faclair Beag,\footnote{\href{http://www.faclair.com/}{http://www.faclair.com/}. \last{April~27}} and also has ports for OpenOffice directly\footnote{\href{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}. \last{April~27}} and a Firefox extension.\footnote{\href{https://extensions.openoffice.org/en/project/faclair-afb}{https://extensions.openoffice.org/en/project/faclair-afb}. \last{April~27}} An Faclair Beag also offers an online dictionary with over 85k words\footnote{\href{http://www.faclair.com/GaelicDictionaryAbout.html\#About}{http://www.faclair.com/GaelicDictionaryAbout.html\#About}. \last{April~27}}
  (and almost a million forms\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}}) and in inbuilt lemmatizer.\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}} Another spellchecker also exists on GitHub,\footnote{\href{https://github.com/gooselinux/hunspell-gd}{https://github.com/gooselinux/hunspell-gd}. \last{April~27}} but it is probably derivative, and it has not been worked on recently.
 
- More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh}. \last{April~27}} (pronounced 'Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\`ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\`{o}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot,\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/}. \last{April~27}} which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
+ More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh}. \last{April~27}} (pronounced `Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\`ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\`{o}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot,\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/}. \last{April~27}} which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
 
 Navigating resources to identify what is open source and what is not is difficult. As mentioned in Section~\ref{subsec:where-is-open-source-code}, one of the OSI's definitions for open source was that it be well publicised. This cannot be said to be the case for coding resources for Gaelic; there is no central location for viewing tools. The LRE Map has no Gaelic resources, although a POS Tagger, two corpora, a tokenizer, and Babouk corpus tool resource are mentioned for Irish.\footnote{\href{http://www.resourcebook.eu/searchll.php}{http://www.resourcebook.eu/searchll.php}. \last{April~27}} Linghub returns 30 entries - not many, considering it is an aggregator.\footnote{\href{http://linghub.org/search/?query=Gaelic}{http://linghub.org/search/?query=Gaelic}. \last{April~27}} GitHub returns 62 repositories that mention Gaelic,\footnote{\href{https://github.com/search?q=gaelic}{https://github.com/search?q=gaelic}. \last{April~27}} although it is unclear if these are for Irish.
 
