fix: ignore lists in toc

--- a/thesiscommands.sty
+++ b/thesiscommands.sty
@@ -263,7 +263,7 @@
 \usepackage[sc]{mathpazo}
 
 % Add the Bibliography to the Table of Contents
-\usepackage[nottoc]{tocbibind}
+\usepackage[nottoc,notlof,notlot,section]{tocbibind}
 % Rename to References
 \renewcommand{\bibname}{References}
 
