--- a/case-studies.tex
+++ b/case-studies.tex
@@ -4,6 +4,10 @@
 
 After having done a broad review of open source code for low resource languages above, here I dive deeper by looking for resources for two languages in particular: Scottish Gaelic and Naskapi. Both of these are living languages with speaking communities, although their size, coverage by academic research, and political situations are slightly different. Searching for resources for a specific language is most likely the most common use-case for users interested in LRLs, especially as the majority of LRL researchers work with a single language or a suite of languages that they use themselves, as opposed to researchers working on quantitative studies of languages in general. A deep dive should illuminate how open source methodologies can drive language development.
 
+
+% TODO Talk about Gaelic and Naskapi resources and vitality from their own perspective, as opposed to from the perspective of GIDS and so on
+
+
 \subsection{Scottish Gaelic}
 \label{sec:gaelic}
 
@@ -14,6 +18,9 @@ The 2011 Scottish Census indicates that out of the total amount of Gaelic speake
 The B\`ord officially is tasked with promoting and facilitating educational materials, but the initial charter makes no mention of language technology. The National Gaelic Language Plan 2018-2023\footnote{\href{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}. \last{April~27}} \citep{bord2018national} mention the Digital Archive of Scottish Gaelic (DASG),\footnote{\href{http://dasg.ac.uk/en}{http://dasg.ac.uk/en}. \last{April~27}} the largest corpus project for Gaelic, but do not specify other language technology being developed (excepting a brief mention of working with Ireland and Nova Scotia developing shared technology and resources. There are some primary and secondary schools, as well as various Gaelic Language and Studies degrees at English-speaking universities, as well as one Gaelic-speaking university Sabhal M\`or Ostaig\footnote{\href{http://www.smo.uhi.ac.uk/en/}{http://www.smo.uhi.ac.uk/en/}. \last{April~27}} on Skye; educational material from the B\`ord is mainly focused in these areas.
 
 \subsubsection{Language Vitality Status}
+\label{sec:gaelic-vitality-status}
+
+% TODO Add table showing my language vitality metrics for Gaelic
 
 Gaelic has an EGIDS rating of 2, as it is a provincial language given the 2005 GLS Act.\footnote{\href{https://www.ethnologue.com/language/gla}{https://www.ethnologue.com/language/gla}. \last{April~27}}  \citet{lewis2009ethnologue} notes regarding language use that "Resurgence of interest in Scottish Gaelic in 1990s. A number of children learn the language but there are serious problems in language maintenance even in the core areas \citep{salminen2007endangered}. Home, church, community." UNESCO judges it to be {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}. \last{April~27}} The Endangered Languages Project describes it as Threatened or Vulnerable, depending on the source,\footnote{\href{http://endangeredlanguages.com/lang/3049}{http://endangeredlanguages.com/lang/3049}. \last{April~27}} as \citet{salminen2007europe} gives a much smaller population number of 20k for speakers than the other census-based data. \citepos{kornai2013digital} rating declares it as {\it Living}.\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656}. \last{April~27}}
 
@@ -57,7 +64,9 @@ All of the Naskapi speak their own language regularly, in all contexts - excepti
 
 
 \subsubsection{Language Vitality Status}
-\label{sec:naskapi-vitality-status}.
+\label{sec:naskapi-vitality-status}
+
+% TODO Add table showing my language vitality metrics for Naskapi
 
 \citet{lewis2009ethnologue} classifies Naskapi as Level 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk }. \last{April~27}} UNESCO defines it as {\it vulnerable}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-id-2354.html}. \last{April~27}} \citepos{kornai2013digital} digital vitality index awkwardly declares it to be {\it dead}.\footnote{\href{https://hlt.bme.hu/en/dld/language/5651}{https://hlt.bme.hu/en/dld/language/5651}. \last{April~27}} Naskapi does not appear at all on the Endangered Languages Project.
 
