--- a/floss.tex
+++ b/floss.tex
@@ -102,6 +102,8 @@ There are alternatives to using academic institutions as code providers; host yo
 
 Another idea would be to store your data on peer-to-peer or decentralised networks, which lessen the risk of centralised storage facilities, but also require a peer to serve the files for longevity to be assured. Ultimately, the best bet is to build files and code which are actively used by the community; the long tail of disused projects are at the most risk, while more popular projects will find a way to survive. For more on this, see Section~\ref{subsec:sharing-code-without-a-platform}.
 
+% TODO Include note on language changes, too. You reference this in Section 2.1.4
+
 % Universities and institutions have short timelines and are largely dependent on specific, allocated, and thus finite funding. Here, I will answer the question: What other models are there for data storage? What concerns are there?
 
 % Alexis: there are also issues around evolution of code -- what about open source code that does great things but requires, e.g., java from 10 years ago?
