--- a/future-work.tex
+++ b/future-work.tex
@@ -11,6 +11,8 @@ The LRE Map resource is fantastic in that it has an order of magnitude more reso
 \subsection{Rethinking metrics for digital presence}
 \citet{kornai2013digital} was a seminal, groundbreaking analysis of language presence on the web. \citet{gibson2016assessing} was a good extension. \citet{soria2017digital} extends these even further, to better approximate digital language vitality. However, it excluded heritage languages, and does not judge specific languages to test its applicability. As this was a draft to elicit feedback (Soria, personal communication), they can be forgiven for this; but this is then, clearly, an area of future research. As I pointed out, there is no scale as of yet that ranks English on its own ranking, either, where it ought to be given its global digital dominance. And, finally, there is not a good metric that combines quantitative and qualitative measurements together, although \citepos{kornai2015new} inclusion of SIL approaches this. While this would be difficult, I think that it could be possible.
 
+Another interesting avenue of research would be to analyse metrics for digital presence for constructed languages. While scoping a metric is understandable, excluding entire communities because they are centred around \textit{a priori} languages seems, to me, to be rash, especially as these languages often have a strong identify function for their speakers.
+
 \subsection{Rethinking language diversity and typological relation}
 
 \citet{ginsburgh2011many} asked how many languages we really need; \citet{bender2010grand, bender2016linguistic} touched on the field of language typology being a resource for multilingual projection of language models and tooling. I was unable to find research on the number of languages which could functionality have multilingual NLP applied to them in the world. It ought to be possible to calculate a number of languages for which automatic hunspell dictionaries could be elicited; and then automatic POS taggers; and then automatic grammar models, and so on. Put succinctly, if Irish morphological parsers can be applied to Gaelic, could they also be applied to Cornish? And if they can be applied to Cornish, then it might be possible to cluster all of the Goidelic languages in one grouping, such that the amount of languages which require language development could be thought of less as individual entities but as groupings of typological features which can multilingual NLP can be adapted for. This would be an interesting area of research, although it is unclear how easy it would be to grasp the low-hanging fruit.
