--- a/references.bib
+++ b/references.bib
@@ -16,6 +16,21 @@ journal = {CoRR},
 volume  = {abs/1609.08144}
 }
 
+@unpublished{littauerfacebook,
+  title={Constructing Corpora for Low Resource Languages from Social Media},
+  author={Richard Littauer},
+  year={2013},
+  note={Draft}
+}
+
+@inproceedings{scannell2013endangered,
+  title={Endangered languages and social media},
+  author={Scannell, Kevin},
+  booktitle={Presentation at the Workshop at INNET Summer School on Technological Approaches to the Documentation of Lesser-Used Languages},
+  year={2013}
+}
+
+
 @inproceedings{stolcke2002srilm,
   title={SRILM-an extensible language modeling toolkit},
   author={Stolcke, Andreas},
@@ -25,27 +40,30 @@ volume  = {abs/1609.08144}
 
 @phdthesis{adams2017automatic,
   title={Automatic understanding of unwritten languages},
+  school={University of Melbourne},
   author={Adams, Oliver},
   year={2017}
 }
 
-
 @article{dingemanse2008review,
   title={Review of Phonology Assistant 3.0. 1},
   author={Dingemanse, Mark},
+  journal={Language Documentation and Conservation},
   year={2008},
-  publisher={University of Hawai'i Press}
+  publisher={University of Hawai'i Press},
+  volume={2},
+  number={2},
+  pages={325–331},
+  doi={http://hdl.handle.net/10125/4350}
 }
 
-
-
-@article{garofalo1993darpa,
-  title={The DARPA TIMIT acoustic-phonetic continuous speech corpus cdrom},
-  author={Garofalo, John S and Lamel, Lori F and Fisher, William M and Fiscus, Johnathan G and Pallett, David S and Dahlgren, Nancy L},
-  journal={Linguistic Data Consortium},
+@article{garofolo1993darpa,
+  title={DARPA TIMIT acoustic-phonetic continous speech corpus CD-ROM. NIST speech disc 1-1.1},
+  author={Garofolo, John S and Lamel, Lori F and Fisher, William M and Fiscus, Jonathan G and Pallett, David S},
+  journal={NASA STI/Recon technical report n},
+  volume={93},
   year={1993}
 }
-
 
 @inproceedings{kempton2009finding,
   title={Finding allophones: An evaluation on consonants in the TIMIT corpus},
