--- a/thesis.tex
+++ b/thesis.tex
@@ -8,6 +8,7 @@
 \usepackage{thesiscommands}
 
 \begin{document}
+\hypersetup{pageanchor=false}
 
 \include{title-page}
 
@@ -27,6 +28,7 @@
 \newpage
 
 % Start page numbers again, using arabic this time
+\hypersetup{pageanchor=true}
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
